deployment/canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sampleapp-canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sampleapp
        version: canary
    spec:
      containers:
      - name: sampleapp
        image: registry.ng.bluemix.net/rmoe/demoapp:canary
        imagePullPolicy: Always
