deployment/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sampleapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sampleapp
        version: prod
    spec:
      containers:
      - name: sampleapp
        image: registry.ng.bluemix.net/rmoe/demoapp:c30cee9
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sampleapp
spec:
  ports:
  - targetPort: 8080
    port: 8080
    name: http
  selector:
    app: sampleapp
